WIP: Fix ghost panels position
This is completely broken in c++, probably a temporary fix that might need to be reverted later

--- a/styles/hud/hud.scss
+++ b/styles/hud/hud.scss
@@ -22,11 +22,6 @@
 	flow-children: none;
 }
 
-// TODO: what the fuck?
-MomHudGhostEntities {
-	position: 100px 200px 0px;
-}
-
 .hud-blur {
 	width: 100%;
 	height: 100%;
